tests/fail/cede_param_double_unwrap.stderr
error[E0438]: Use of moved value: 'res'
 --> tests/fail/cede_param_double_unwrap.tk:11:17
   |
 11 |     auto val2 = res.unwrap() 
   |                 ^
